syntax = "proto2";
package spec;

option go_package = "github.com/bufbuild/connect-web";

message Proto2PackedMessage {
  repeated double packed_double_field = 101 [packed = true];
  repeated uint32 packed_uint32_field = 102 [packed = true];
  repeated uint64 packed_uint64_field = 103 [packed = true];
}

message Proto2UnpackedMessage {
  repeated double unpacked_double_field = 201 [packed = false];
  repeated uint32 unpacked_uint32_field = 202 [packed = false];
  repeated uint64 unpacked_uint64_field = 203 [packed = false];
}

message Proto2UnspecifiedPackedMessage {
  repeated double double_field = 1;
  repeated uint32 uint32_field = 2;
  repeated uint64 uint64_field = 3;
}

message Proto2OptionalMessage {
  optional string string_field = 1;
  optional bytes bytes_field = 2;
  optional Proto2Enum enum_field = 3;
  optional Proto2ChildMessage message_field = 4;
}

message Proto2RequiredMessage {
  required string string_field = 1;
  required bytes bytes_field = 2;
  required Proto2Enum enum_field = 3;
  required Proto2ChildMessage message_field = 4;
}

message Proto2RequiredDefaultsMessage {
  required string string_field = 1 [default = "hello \" */ "];
  required bytes bytes_field = 2 [default = "\0x\\x\"x\'A\101\x41\x41\u0041\U00000041\b\f\n\r\t\v"];
  required Proto2Enum enum_field = 3 [default = PROTO2_ENUM_YES];
  required Proto2ChildMessage message_field = 4;
}

message Proto2DefaultsMessage {
  optional string string_field = 1 [default = "hello \" */ "];
  optional bytes bytes_field = 2 [default = "\0x\\x\"x\'A\101\x41\x41\u0041\U00000041\b\f\n\r\t\v"];
  optional int32 int32_field = 3 [default = 128];
  optional int64 int46_field = 4 [default = -256];
  optional float float_field = 5 [default = -512.13];
  optional bool bool_field = 6 [default = true];
  optional Proto2Enum enum_field = 7 [default = PROTO2_ENUM_YES];
  optional Proto2ChildMessage message_field = 8;
}

enum Proto2Enum {
  PROTO2_ENUM_YES = 1;
  PROTO2_ENUM_NO = 2;
}

message Proto2ChildMessage {
  optional string string_field = 1;
}