syntax = "proto3";
package spec;

import "google/protobuf/wrappers.proto";

message WrappersMessage {
    google.protobuf.DoubleValue double_value_field = 1;
    google.protobuf.BoolValue bool_value_field = 2;
    google.protobuf.FloatValue float_value_field = 3;
    google.protobuf.Int64Value int64_value_field = 4;
    google.protobuf.UInt64Value uint64_value_field = 5;
    google.protobuf.Int32Value int32_value_field = 6;
    google.protobuf.UInt32Value uint32_value_field = 7;
    google.protobuf.StringValue string_value_field = 8;
    google.protobuf.BytesValue bytes_value_field = 9;
    oneof oneof_fields {
        google.protobuf.DoubleValue oneof_double_value_field = 11;
        google.protobuf.BoolValue oneof_bool_value_field = 12;
        google.protobuf.FloatValue oneof_float_value_field = 13;
        google.protobuf.Int64Value oneof_int64_value_field = 14;
        google.protobuf.UInt64Value oneof_uint64_value_field = 15;
        google.protobuf.Int32Value oneof_int32_value_field = 16;
        google.protobuf.UInt32Value oneof_uint32_value_field = 17;
        google.protobuf.StringValue oneof_string_value_field = 18;
        google.protobuf.BytesValue oneof_bytes_value_field = 19;
    }
    repeated google.protobuf.DoubleValue repeated_double_value_field = 21;
    repeated google.protobuf.BoolValue repeated_bool_value_field = 22;
    repeated google.protobuf.FloatValue repeated_float_value_field = 23;
    repeated google.protobuf.Int64Value repeated_int64_value_field = 24;
    repeated google.protobuf.UInt64Value repeated_uint64_value_field = 25;
    repeated google.protobuf.Int32Value repeated_int32_value_field = 26;
    repeated google.protobuf.UInt32Value repeated_uint32_value_field = 27;
    repeated google.protobuf.StringValue repeated_string_value_field = 28;
    repeated google.protobuf.BytesValue repeated_bytes_value_field = 29;

}
